# linmem

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs
.cargo/: config.toml
.github/workflows/: header.yml  main.yml  release.yml  staticlib.yml
src/: bin.rs  ffi.rs  lib.rs  macros.rs  memory.rs
