[package]
name = "linmem"
version = "0.1.3"
edition = "2021"

[profile.release]
strip = true
lto = true

[[bin]]
name = "cli"
path = "src/bin.rs"

[lib]
name = "linmem"
crate-type = ["staticlib"]
path = "src/lib.rs"

[dependencies]

memmap2 = "0.9.5"
concurrent-queue = "2.5.0"
parking_lot = "0.12.3"
dashmap = "6.1.0"
cbindgen = "0.27"
clap = { version = "4.5.22", features = ["derive"] }
